--- a/css/styles.css
+++ b/css/styles.css
@@ -462,6 +462,14 @@ ul {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.filter-btn.current {
+    background-color: var(--primary-brand);
+    border: 1px solid var(--primary-brand);
+    color: var(--color-accent);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
